--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next-js-boilerplate",
   "version": "1.0.0",
   "scripts": {
+    "pretty-quick": "pretty-quick",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -47,7 +48,8 @@
     "lint-staged": "^12.3.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.0",
+    "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.17",
     "typescript": "^4.5.5"
